[gd_scene load_steps=4 format=1]

[ext_resource path="res://NPC.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.1599, 31.3594 )

[node name="npc" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="interactButton" type="TextureButton" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -31.0
margin/top = -32.0
margin/right = 32.0
margin/bottom = 31.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="textPanel" type="Panel" parent="interactButton"]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.2381
margin/top = -0.365079
margin/right = 2.03175
margin/bottom = 0.031746

[node name="text" type="Label" parent="interactButton"]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.39683
margin/top = -0.206349
margin/right = 2.01587
margin/bottom = 0.015873
text = "Hello!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="interactButton" to="." method="_on_interactButton_pressed"]


